# darxiv

./: .gitignore  README.md  main.py  pyproject.toml
app/: main.py
app/application/: __init__.py
app/application/dto/: __init__.py  app_settings_dto.py  paper_detail.py  paper_list_filters.py  paper_list_item.py  paper_status_patch_input.py  query_debug_info.py  scheduler_tick_event.py  subscription_upsert_input.py  sync_result.py
app/application/services/: __init__.py  exceptions.py  paper_library_service.py  paper_query_service.py  settings_service.py  status_service.py  subscription_service.py  sync_service.py
app/domain/: __init__.py
app/domain/enums/: __init__.py  sync_status.py  trigger_type.py
app/domain/models/: __init__.py  _normalization.py  paper.py  paper_status.py  subscription.py  sync_run.py
app/infrastructure/arxiv/: __init__.py  client.py  exceptions.py  parser.py  query_builder.py
app/infrastructure/config/: __init__.py  app_config.py  runtime_paths.py
app/infrastructure/db/: connection.py  migrations.py  schema.sql
app/infrastructure/logging/: __init__.py  setup.py
app/ui/: __init__.py  app_shell.py
docs/: desktop_app_design.md  release.md
docs/plans/: README.md
scripts/: pack.ps1  smoke.ps1
tests/: __init__.py  conftest.py  test_slice_01_models.py  test_slice_02_repository.py  test_slice_03_arxiv.py  test_slice_04_sync_service.py  test_slice_05_subscription_service.py  test_slice_06_paper_query_service.py  test_slice_07_status_service.py  test_slice_08_ui.py  test_slice_09_settings_scheduler.py  test_slice_10_query_optimization.py  test_slice_11_packaging_release.py  test_slice_12_dashboard_refresh_lifecycle.py
(+23 files in other folders)
